--- a/post/templates/poroje/edit_post.html
+++ b/post/templates/poroje/edit_post.html
@@ -3,7 +3,7 @@
 {% block content %}
     <div class="container">
         <div class="col-md-12 my-3">
-            <form action="{% url 'edit-post' post_id=specified_post.id %}" method="post">
+            <form action="{% url 'edit-post' post_id=specified_post.id %}" method="post" enctype='multipart/form-data'>
                 {% csrf_token %}
                 {{form.as_p}}
                 <input type="submit" , value="bezan berim daa!">
