--- a/post/templates/poroje/page_view.html
+++ b/post/templates/poroje/page_view.html
@@ -17,6 +17,16 @@
             {% endif %}
         </div>
         <div class="col-md-6">
+            <div class="row">
+                <div class="col-md-5" style="border: solid orange; margin: 15px;">
+                    Followers :
+                    <small>{{followers.count}}</small>
+                </div>
+                <div class="col-md-5" style="border: solid orange; margin: 15px;">
+                    Followings :
+                    <small>{{followings.count}}</small>
+                </div>
+            </div>
             <h1>username : {{pointed_user.username}}</h1>
             <h5>
                 <p>
@@ -34,6 +44,10 @@
                         <a class="btn btn-sm btn-primary" href="/post_urls/send_message/{{pointed_user.username}}">
                             <small>Send message</small>
                         </a>
+                        <form action="" method="post" >
+                            {% csrf_token %}
+                            <input type="submit" ,  class="btn btn-warning", value="Follow user !" , name="follow">
+                        </form>
                     </p>
                 {% endif %}
             {% endif %}
