--- a/post/templates/poroje/page_view.html
+++ b/post/templates/poroje/page_view.html
@@ -18,13 +18,17 @@
         </div>
         <div class="col-md-6">
             <div class="row">
-                <div class="col-md-5" style="border: solid orange; margin: 15px;">
+                <div class="col-md-3" style="border: solid orange; margin: 15px; height: 90px; background-color: cornflowerblue;">
                     Followers :
                     <small>{{followers.count}}</small>
                 </div>
-                <div class="col-md-5" style="border: solid orange; margin: 15px;">
+                <div class="col-md-3" style="border: solid orange; margin: 15px; background-color: cornflowerblue;">
                     Followings :
                     <small>{{followings.count}}</small>
+                </div>
+                <div class="col-md-3" style="border: solid orange; margin: 15px; background-color: cornflowerblue;">
+                    Posts :
+                    <small>{{posts.count}}</small>
                 </div>
             </div>
             <h1>username : {{pointed_user.username}}</h1>
