--- a/post/templates/forms/login.html
+++ b/post/templates/forms/login.html
@@ -4,7 +4,11 @@
     <div class="container">
         safhe ye login e shoma 
         <div class="col-md-12 my-3">
-            <form action="{% url 'login-mk' %}" method="post">
+            {% if request.GET.next %}
+                <form action="{% url 'login-mk' %}?next={{request.GET.next}}" method="post">
+            {% else %}
+                <form action="{% url 'login-mk' %}" method="post">
+            {% endif %}
                 {% csrf_token %}
                 {{form.as_p}}
                 <input type="submit" , value="login">
