--- a/post/templates/forms/dashboard.html
+++ b/post/templates/forms/dashboard.html
@@ -22,7 +22,7 @@
         <div class="col-md-6">
             <div class="row">
                 <div class="col-md-3" style="border: solid orange; margin: 15px; height: 90px; background-color: cornflowerblue;">
-                    Followers :
+                    <a href="/followersandfollowings/{{user.username}}">Followers :</a>
                     <small>{{followers.count}}</small>
                 </div>
                 <div class="col-md-3" style="border: solid orange; margin: 15px; background-color: cornflowerblue;">
