--- a/post/templates/poroje/relations.html
+++ b/post/templates/poroje/relations.html
@@ -4,7 +4,7 @@
 
 {% block content %}
     <div class="col-md-12">
-        <h1>Relations of {{user.username}}</h1>
+        <h1>Relations of {{pointed_user.username}}</h1>
             <div class="row mt-1 g-3 btn-light " style="height: 100%;">
                 <h1>Followings :</h1>
                 {% for follower in followers %}
