--- a/post/templates/class_base.html
+++ b/post/templates/class_base.html
@@ -126,8 +126,12 @@
                         <button class="btn btn-outline-secondary" type="button">Movies</button>
                         <button class="btn btn-outline-secondary" type="button">Books</button> {% endcomment %}
                     </form>
+                </div>
+                <div class="container-fluid justify-content-start">
+                    </a>
+                </div>
             </nav>
-            </div>
+        </div>
             <hr>
             <hr>
         <!-- Section-->
