--- a/post/templates/tag_list.html
+++ b/post/templates/tag_list.html
@@ -1,6 +1,6 @@
 {% extends "class_base.html" %}
 
-{% block content %}
+{% comment %} {% block content %}
     <div class="container">
         <div class="col-md-12 my-3">
             <div class="col-md-12">
@@ -22,4 +22,42 @@
             {% endfor %}
         </div>
     </div>
+{% endblock content %} {% endcomment %}
+
+
+{% block content %}
+
+
+{% for tag in page_obj %}
+
+    <p style="border: solid red; margin-top: 30px;">
+        <a href="{% url 'edit-tag-list' tag_id=tag.id %}">
+            <b>{{tag.name}}</b>
+        </a>
+        <br>
+        <a class="btn btn-sm btn-danger" href="{% url 'delete-tag-mk' tag_id=tag.id %}">
+            <small>hazf !</small>
+        </a> 
+    </p>
+
+{% endfor %}
+
+<div class="pagination">
+    <span class="step-links">
+        {% if page_obj.has_previous %}
+            <a href="?page=1">&laquo; first</a>
+            <a href="?page={{ page_obj.previous_page_number }}">previous</a>
+        {% endif %}
+
+        <span class="current">
+            Page {{ page_obj.number }} of {{ page_obj.paginator.num_pages }}.
+        </span>
+
+        {% if page_obj.has_next %}
+            <a href="?page={{ page_obj.next_page_number }}">next</a>
+            <a href="?page={{ page_obj.paginator.num_pages }}">last &raquo;</a>
+        {% endif %}
+    </span>
+</div>
+
 {% endblock content %}
