--- a/post/templates/class_post_detail.html
+++ b/post/templates/class_post_detail.html
@@ -7,9 +7,9 @@
         <div class="row" style="height: 100%;">
             <div class="col-md-6">
                 {% if post.image %}
-                    <img src="{{post.image.url}}" alt="image_of_post" style="width: 400px; height: 400px; border: solid red;">
+                    <img class="responsive" src="{{post.image.url}}" alt="image_of_post" style="width: 400px; height: 400px; border: solid red;">
                 {% else %}
-                    <img src="{% static 'download.jpeg' %}" alt="image_of_post" style=" border: solid red;">
+                    <img class="responsive" src="{% static 'download.jpeg' %}" alt="image_of_post" style=" border: solid red;">
                 {% endif %}
             </div>
             <div class="col-md-6">
@@ -23,9 +23,9 @@
                     liked by <span style="border: solid blue;">{{likes.count}} </span>  user :
                 </a>
                 
-                    {% for like in likes %}
+                    {% comment %} {% for like in likes %}
                     {{like.writer}}-
-                    {% endfor %}
+                    {% endfor %} {% endcomment %}
                 {% else %}
                     No likes.
                 {% endif %}
