--- a/post/templates/forms/dashboard.html
+++ b/post/templates/forms/dashboard.html
@@ -79,6 +79,10 @@
                 <small>notify all followers</small>
             </a>
 
+            <a class="btn btn-sm btn-light" href="post_urls/liked_posts" style="margin-top: 30px;">
+                <small>see liked posts</small>
+            </a>
+
         </div>
     </div>
 </div>
