--- a/post/templates/class_base.html
+++ b/post/templates/class_base.html
@@ -169,7 +169,7 @@
             </div>
         </div> {% endcomment %}
 
-        <div class="container mt-3" style="text-align: center; min-height: 400px;">
+        <div class="container mt-3" style="text-align: center; min-height: 400px; margin-bottom: 50px; ">
             {% if messages %}
                     {% for message in messages %}
                         <div id="messg" class="alert alert-{{message.tags}}" role="alert">
