final_project_faze 1

--- a/post/templates/class_base.html
+++ b/post/templates/class_base.html
@@ -109,6 +109,9 @@
                             <a class="btn btn-sm btn-primary" style="margin-left: 5px;" href="/dashboard">
                                 <small>dashboard</small>
                             </a>
+                            <a class="btn btn-sm btn-warning" style="margin-left: 5px;" href="/onlineshop/dashboard">
+                                <small>Shop - dashboard</small>
+                            </a>
                         {% else %}
                             <a class="btn btn-sm btn-outline-primary" style="margin-left: 5px;" href="/dashboard">
                                 <small>login</small>
