--- a/post/templates/forms/dashboard.html
+++ b/post/templates/forms/dashboard.html
@@ -83,6 +83,10 @@
                 <small>see liked posts</small>
             </a>
 
+            <a class="btn btn-sm btn-dark" href="post_urls/addresses" style="margin-top: 30px;">
+                <small>see linked addresses </small>
+            </a>
+
             <a class="btn btn-sm btn-primary" href="onlineshop/dashboard" style="margin-top: 30px;">
                 <small>Shop Dashboard</small>
             </a>
