--- a/post/templates/poroje/page_view.html
+++ b/post/templates/poroje/page_view.html
@@ -67,6 +67,11 @@
                                 <input type="submit" ,  class="btn btn-warning", value="Follow user !" , name="follow">
                             </form>
                         {% endif %}
+                        <br>
+                        
+                        <a class="btn btn-sm btn-warning" href="/onlineshop/Shop/{{pointed_user.username}}">
+                            <small>View Shop</small>
+                        </a>
 
 
                     </p>
